--- a/theartofchrisc/src/app/app.component.html
+++ b/theartofchrisc/src/app/app.component.html
@@ -27,7 +27,7 @@
   </nav>
   <div class="row mt-4">
     <div class="col-12 text-center">
-      <video width="95%" controls>
+      <video width="95%" controls autoplay>
         <source src="../assets/video/demo-reel.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
