--- a/theartofchrisc/src/app/app.component.html
+++ b/theartofchrisc/src/app/app.component.html
@@ -1,38 +1,31 @@
 <div class="container">
-  <div class="row mt-4">
-    <div class="col-12 text-center">
-      <img style="height: 70px;" src="../assets/img/c-logo.png">
+    <div class="row mt-4">
+        <div class="col-12 text-center">
+            <a  routerLink="home">
+                <img style="height: 70px;" src="../assets/img/c-logo.png">
+            </a>
+        </div>
     </div>
-  </div>
-  <nav id="navbar" class="navbar fade-in one row mt-4">
-    <div class="mx-auto" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Video/Film</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#my-projects">Design</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#resume">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#contact">Resume</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#contact">Contact</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  <div class="row mt-5">
-    <div class="col-12 text-center">
-      <video width="95%" controls autoplay>
-        <source src="../assets/video/demo-reel.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-      </video>
-    </div>
-  </div>
+    <nav id="navbar" class="navbar fade-in one row mt-4">
+        <div class="mx-auto" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="video">Video/Film</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="design">Design</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="about">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="resume">Resume</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="contact">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <router-outlet></router-outlet>
 </div>
-
-<!-- <router-outlet></router-outlet> -->
