--- a/theartofchrisc/src/styles.css
+++ b/theartofchrisc/src/styles.css
@@ -12,12 +12,14 @@
 
 * {
     font-family: 'avenir';
+    color: #FEFEFE;
 }
 
 .navbar {
     z-index: 9999999;
     width: 100%;
     padding-bottom: 0px;
+    margin-bottom: 60px
     /* background: transparent !important; */
   }
   
@@ -52,4 +54,15 @@
   
   .nav-item {
     margin: 0 15px;
+  }
+
+  .page-title {
+    text-align: center;
+    letter-spacing: 3px;
+  }
+
+  .video-title {
+    text-align: left;
+    letter-spacing: 3px;
+    border-bottom: 2px solid #fefefe;
   }
