--- a/theartofchrisc/src/app/video/video.component.html
+++ b/theartofchrisc/src/app/video/video.component.html
@@ -3,7 +3,10 @@
 </h1>
 <div class="row video-row">
   <div class="col-4">
-    <img style="width: 100%;" src="../../assets/gif/TONIGHT.gif">
+    <a class="video-click" (click)="openDialog()">
+      <!-- <p class="video-click-title">Watch Video</p> -->
+      <img style="width: 100%;" src="../../assets/gif/TONIGHT.gif">
+    </a>
   </div>
   <div class="col-8">
     <h5 class="video-title">
