--- a/theartofchrisc/src/app/app.component.html
+++ b/theartofchrisc/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="padding: 5%; padding-top: 0px;">
     <div class="row mt-4">
         <div class="col-12 text-center">
             <a  routerLink="home">
