--- a/theartofchrisc/src/app/design/design.component.html
+++ b/theartofchrisc/src/app/design/design.component.html
@@ -1,3 +1,37 @@
-<p>
-  design works!
-</p>
+<h1 class="page-title">
+  DESIGN
+</h1>
+<div class="row">
+  <h4 class="col-12">
+    Flyers
+  </h4>
+  <div class="col-3 design-square-container">
+    <img src="../../assets/img/c-logo.png">
+  </div>
+  <div class="col-3 design-square-container">
+    <img src="../../assets/img/c-logo.png">
+  </div>
+  <div class="col-3 design-square-container">
+    <img src="../../assets/img/c-logo.png">
+  </div>
+  <div class="col-3 design-square-container">
+    <img src="../../assets/img/c-logo.png">
+  </div>
+  <div class="col-3 design-square-container">
+    <img src="../../assets/img/c-logo.png">
+  </div>
+  <div class="col-3 design-square-container">
+    <img src="../../assets/img/c-logo.png">
+  </div>
+  <div class="col-3 design-square-container">
+    <img src="../../assets/img/c-logo.png">
+  </div>
+  <div class="col-3 design-square-container">
+    <img src="../../assets/img/c-logo.png">
+  </div>
+  <div class="col-3 design-square-container">
+    <img src="../../assets/img/c-logo.png">
+  </div>
+
+
+</div>
