--- a/theartofchrisc/src/app/video/video.component.html
+++ b/theartofchrisc/src/app/video/video.component.html
@@ -7,63 +7,28 @@
       <!-- <p class="video-click-title">Watch Video</p> -->
       <img style="width: 100%;" src="../../assets/gif/TONIGHT.gif">
     </a>
+    <h4 class="mt-2">
+        Tonight - Animated Short Film
+    </h4>
   </div>
-  <div class="col-8">
-    <h5 class="video-title">
-      Tonight - Animated Short Film
-    </h5>
-    <p>
-      A cut of Tonight (my animated short film) I showed at my grandfather's,
-      Richard F. Mendez, funeral as an intro to a slideshow of his life.
-      He will forever live within this film, and character.
-      He is greatly missed always.
-    </p>
-  </div>
-</div>
-<div class="row video-row">
   <div class="col-4">
     <img style="width: 100%;" src="../../assets/gif/Stories-with-the-Pope_1.gif">
+    <h4 class="mt-2">
+        Ya'll throwing down for your dog or nah?
+    </h4>
   </div>
-  <div class="col-8">
-    <h5 class="video-title">
-      Ya'll throwing down for your dog or nah?
-    </h5>
-    <p>
-      All Def Productions: Stories with the Pope - Episode 1.
-      Narrated by stand-up comedian and social media star Victor Pope Jr.
-      Animation and Design by Chris Calderon.
-    </p>
-  </div>
-</div>
-<div class="row video-row">
   <div class="col-4">
     <img style="width: 100%;" src="../../assets/gif/Stories-with-the-Pope_Ep_2_FINAL.gif">
-  </div>
-  <div class="col-8">
-    <h5 class="video-title">
-      Would you talk to a girl that could see the future?
-    </h5>
-    <p>
-      All Def Productions: Stories with the Pope - Episode 2.
-      Narrated by stand-up comedian and social media star Victor
-      Pope Jr. Animation and Design by Chris Calderon.
-    </p>
+    <h4 class="mt-2">
+        Would you talk to a girl that could see the future?
+    </h4>
   </div>
 </div>
 <div class="row video-row">
   <div class="col-4">
     <img style="width: 100%;" src="../../assets/gif//USAA-Box-model_Final.gif">
-  </div>
-  <div class="col-8">
-    <h5 class="video-title">
-      USAA Real Estate Box Reveal
-    </h5>
-    <p>
-      A project I worked on with USAA throughout October 2017.
-      Usually thousands of dollars are paid to get a box printed, only for the client to see what it looks like
-      physically.
-      This time around I was tasked to model the box in Maya to show the CEO for approval. This was later approved then
-      printed for USAA customers.
-    </p>
+    <h4 class="mt-2">
+        USAA Real Estate Box Reveal
+    </h4>
   </div>
 </div>
