--- a/theartofchrisc/src/app/main/main.component.html
+++ b/theartofchrisc/src/app/main/main.component.html
@@ -1,8 +1,18 @@
 <div class="row mt-5">
   <div class="col-12 text-center">
-    <video width="95%" controls autoplay>
+    <video width="100%" controls autoplay>
       <source src="../assets/video/demo-reel.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
+  </div>
+
+  <div class="col-4 text-center">
+    <img style="width: 100%;" src="../../assets/gif/nbvcx.gif">
+  </div>
+  <div class="col-4 text-center">
+    <img style="width: 100%;" src="../../assets/gif/vid_2019.gif">
+  </div>
+  <div class="col-4 text-center">
+    <img style="width: 100%;" src="../../assets/gif/nbvcx.gif">
   </div>
 </div>
